# wick

./: CLAUDE.md  Cargo.toml  README.md  TODO.md
.claude/: settings.json
.github/workflows/: deploy-docs.yml
crates/dew/: Cargo.toml  README.md
crates/dew-complex/: Cargo.toml  README.md
crates/dew-complex/src/: c.rs  cuda.rs  funcs.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  ops.rs  optimize.rs  parity_tests.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-complex/src/cranelift/: compiled.rs  error.rs  jit.rs  mod.rs  types.rs
crates/dew-cond/: Cargo.toml  README.md
crates/dew-cond/src/: c.rs  cranelift.rs  cuda.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-core/: Cargo.toml  README.md
crates/dew-core/src/: lib.rs  optimize.rs
crates/dew-linalg/: Cargo.toml  README.md
crates/dew-linalg/src/: c.rs  cuda.rs  exhaustive_tests.rs  funcs.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  ops.rs  optimize.rs  parity_tests.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-linalg/src/cranelift/: compiled.rs  error.rs  jit.rs  mod.rs  tests.rs  types.rs
crates/dew-quaternion/: Cargo.toml  README.md
crates/dew-quaternion/src/: c.rs  cuda.rs  funcs.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  ops.rs  optimize.rs  parity_tests.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-quaternion/src/cranelift/: compiled.rs  error.rs  jit.rs  mod.rs  types.rs
crates/dew-scalar/: Cargo.toml  README.md
crates/dew-scalar/src/: c.rs  cranelift.rs  cuda.rs  glsl.rs  hip.rs  lib.rs  lua.rs  opencl.rs  optimize.rs  rust.rs  tokenstream.rs  wgsl.rs
crates/dew-wasm/: Cargo.toml  README.md
crates/dew-wasm/src/: lib.rs
crates/dew/src/: lib.rs
docs/: api-reference.md  complex.md  core.md  integration.md  introduction.md  linalg.md  optimization.md  package.json  playground.md  quaternion.md  scalar.md  use-cases.md
docs/.vitepress/: config.ts
docs/.vitepress/playground/components/: DewPlayground.vue  PlaygroundEditor.vue
docs/.vitepress/playground/languages/: dew-monarch.ts
docs/backends/: c.md  cranelift.md  cuda.md  glsl.md  hip.md  lua.md  opencl.md  rust.md  tokenstream.md  wgsl.md
editors/tree-sitter-dew/: package.json
editors/vscode/: package.json
examples/: basic.rs  complex.rs  conditionals.rs  linalg.rs  quaternion.rs  wgsl_codegen.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_backend_parity.rs  fuzz_complex_parity.rs  fuzz_eval.rs  fuzz_linalg_parity.rs  fuzz_parse.rs  fuzz_quaternion_parity.rs  fuzz_roundtrip.rs
scripts/: build-wasm.sh
