[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/wick"

[workspace.dependencies]
dew-core = { path = "crates/dew-core", version = "0.1.0" }
dew-cond = { path = "crates/dew-cond", version = "0.1.0" }
dew-scalar = { path = "crates/dew-scalar", version = "0.1.0" }
dew-linalg = { path = "crates/dew-linalg", version = "0.1.0" }
dew-complex = { path = "crates/dew-complex", version = "0.1.0" }
dew-quaternion = { path = "crates/dew-quaternion", version = "0.1.0" }
dew = { path = "crates/dew", version = "0.1.0" }

# Root package for examples
[package]
name = "wick-examples"
version = "0.0.0"
edition = "2024"
publish = false

[features]
default = []
wgsl = ["dew-scalar/wgsl"]

[dependencies]
dew-core = { workspace = true, features = ["cond", "func"] }
dew-scalar = { workspace = true }
dew-linalg = { workspace = true }
dew-complex = { workspace = true }
dew-quaternion = { workspace = true }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "conditionals"
path = "examples/conditionals.rs"

[[example]]
name = "wgsl_codegen"
path = "examples/wgsl_codegen.rs"
required-features = ["wgsl"]

[[example]]
name = "linalg"
path = "examples/linalg.rs"

[[example]]
name = "complex"
path = "examples/complex.rs"

[[example]]
name = "quaternion"
path = "examples/quaternion.rs"

[profile.dev]
debug = 0
