[package]
name = "dew-complex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Complex number support for dew expressions"
readme = "README.md"

[features]
default = []
wgsl = ["dew-cond/wgsl"]
glsl = ["dew-cond/glsl"]
rust = ["dew-cond/rust"]  # Rust text codegen
c = ["dew-cond/c"]        # C text codegen
opencl = ["dew-cond/opencl"]  # OpenCL kernel codegen
cuda = ["dew-cond/cuda"]      # CUDA kernel codegen
hip = ["dew-cond/hip"]        # HIP kernel codegen (AMD ROCm)
tokenstream = ["dew-cond/tokenstream", "quote", "proc-macro2"]  # TokenStream codegen for proc-macros
lua-codegen = ["dew-cond/lua-codegen"]  # Pure Rust codegen, WASM-compatible
lua = ["lua-codegen", "mlua"]                    # Full Lua with execution via mlua
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "dew-cond/cranelift"]
optimize = ["dew-core/optimize"]  # Expression optimization passes
all = ["wgsl", "glsl", "rust", "c", "opencl", "cuda", "hip", "tokenstream", "lua", "cranelift"]

[dependencies]
dew-core = { workspace = true, features = ["func"] }
dew-cond.workspace = true
num-traits = "0.2"

# TokenStream backend
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

mlua = { version = "0.10", features = ["luajit", "vendored"], optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
