[package]
name = "dew-cond"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Conditional and boolean support for dew expressions"

[features]
default = []
wgsl = []
glsl = []
rust = []  # Rust text codegen
c = []       # C text codegen
opencl = []  # OpenCL kernel codegen
cuda = []    # CUDA kernel codegen
hip = []     # HIP kernel codegen (AMD ROCm)
tokenstream = ["quote", "proc-macro2"]  # TokenStream codegen for proc-macros
lua-codegen = []  # Pure Rust codegen, no native deps
lua = ["lua-codegen"]  # Alias for consistency (no execution in dew-cond)
cranelift = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module"]
all = ["wgsl", "glsl", "rust", "c", "opencl", "cuda", "hip", "tokenstream", "lua", "cranelift"]

[dependencies]
dew-core = { workspace = true, features = ["cond"] }

# TokenStream backend
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

# Cranelift backend
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
