[package]
name = "dew-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for Dew expression language"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "core"]

# Module profiles
core = ["dew-scalar"]
linalg = ["core", "dew-linalg"]
graphics = ["linalg", "dew-quaternion"]
signal = ["core", "dew-complex"]
full = ["core", "dew-linalg", "dew-complex", "dew-quaternion"]

[dependencies]
dew-core = { path = "../dew-core", features = ["cond", "func"] }

# Optional domain crates
dew-scalar = { path = "../dew-scalar", features = ["wgsl", "glsl", "lua-codegen"], optional = true }
dew-linalg = { path = "../dew-linalg", features = ["4d", "wgsl", "glsl", "lua-codegen"], optional = true }
dew-complex = { path = "../dew-complex", features = ["wgsl", "glsl", "lua-codegen"], optional = true }
dew-quaternion = { path = "../dew-quaternion", features = ["wgsl", "glsl", "lua-codegen"], optional = true }

wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
